flycheck-stan/examples/example_error_misspelled_type.stanc3out.txt

Syntax error in 'examples/example_error_misspelled_type.stan', line 8, column 11 to column 12, parsing error:
   -------------------------------------------------
     6:    vector<lower=0>[J] sigma;
     7:  }
     8:  parameters {
                     ^
     9:    rear mu;
    10:    real<lower=0> tau;
   -------------------------------------------------

Expected top-level variable declaration or "}".


